# ciwatch

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  ciwatch.conf.sample  ciwatch.wsgi  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ciwatch/: api.py  config.py  db.py  events.py  filters.py  log.py  models.py  populate.py  server.py  views.py
ciwatch/static/: compare.js  style.css  verified.js
ciwatch/templates/: _contact.html.jinja  _usage.html.jinja  project.html.jinja
ciwatch/tests/: test_ciwatch.py  test_config.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
