[metadata]
name = ciwatch
summary = CI Watch is a CI monitoring dashboard that shows voting history for existing CIs and more.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ciwatch

[entry_points]
console_scripts =
    ciwatch-server = ciwatch.server:main
    ciwatch-populate-database = ciwatch.populate:main
    ciwatch-stream-events = ciwatch.events:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
